# ChangeLog for perl-core/Getopt-Long
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Getopt-Long/ChangeLog,v 1.25 2008/09/10 11:56:14 tove Exp $

*Getopt-Long-2.37 (10 Sep 2008)

  10 Sep 2008; Torsten Veller <tove@gentoo.org> +Getopt-Long-2.37.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Getopt-Long-2.36.ebuild:
  Stable for HPPA too.

  12 Aug 2007; Tom Gall <tgall@gentoo.org> Getopt-Long-2.36.ebuild:
  stable on ppc64

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> Getopt-Long-2.36.ebuild:
  alpha/ia64/x86 stable

  11 May 2007; Joshua Kinard <kumba@gentoo.org> Getopt-Long-2.36.ebuild:
  Stable on mips.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Getopt-Long-2.36.ebuild:
  ppc stable

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Getopt-Long-2.36.ebuild:
  Stable on sparc

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> Getopt-Long-2.35.ebuild:
  Stable on ppc64

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Getopt-Long-2.36.ebuild:
  Marking amd64 stable

  03 Mar 2007; Andrej Kacian <ticho@gentoo.org> Getopt-Long-2.35.ebuild:
  Stable on x86, bug #169153.

*Getopt-Long-2.36 (05 Feb 2007)

  05 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +Getopt-Long-2.36.ebuild:
  Version bump

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  Getopt-Long-2.35.ebuild:
  Stable on hppa

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Getopt-Long-2.35.ebuild:
  ppc stable

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> Getopt-Long-2.35.ebuild:
  Marked stable on mips.

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Getopt-Long-2.35.ebuild:
  Marking amd64 stable

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Getopt-Long-2.34.ebuild, Getopt-Long-2.35.ebuild:
  Adding perl dep

  18 Jul 2006; Bryan Østergaard <kloeri@gentoo.org>
  Getopt-Long-2.35.ebuild: