@@ -1,17 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Getopt-Long/Attic/Getopt-Long-2.34.ebuild,v 1.5 2006/08/04 13:26:19 mcummings Exp $
-
-inherit perl-module
-
-DESCRIPTION="Advanced handling of command line options"
-SRC_URI="mirror://cpan/authors/id/J/JV/JV/${P}.tar.gz"
-HOMEPAGE="http://www.cpan.org/modules/by-authors/id/J/JV/JV/${P}.readme"
-
-SLOT="0"
-LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="x86 amd64 alpha ppc sparc hppa mips ia64 ppc64"
-IUSE=""
-
-DEPEND="virtual/perl-PodParser
-		dev-lang/perl"
