@@ -1,18 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/MIME-Base64/Attic/MIME-Base64-3.05.ebuild,v 1.3 2006/08/04 13:27:06 mcummings Exp $
-
-inherit perl-module
-
-DESCRIPTION="A base64/quoted-printable encoder/decoder Perl Modules"
-HOMEPAGE="http://search.cpan.org/~gaas/${P}/"
-SRC_URI="mirror://cpan/authors/id/G/GA/GAAS/${P}.tar.gz"
-
-LICENSE="|| ( Artistic GPL-2 )"
-SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 mips ppc ppc64 s390 sh sparc x86"
-IUSE=""
-
-SRC_TEST="do"
-
-DEPEND="dev-lang/perl"
