@@ -1,6 +1,9 @@
 # ChangeLog for perl-core/MIME-Base64
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/MIME-Base64/ChangeLog,v 1.14 2007/04/15 21:06:22 corsair Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/MIME-Base64/ChangeLog,v 1.15 2009/03/13 21:03:09 tove Exp $
+
+  13 Mar 2009; Torsten Veller <tove@gentoo.org> -MIME-Base64-3.05.ebuild:
+  Cleanup
 
   15 Apr 2007; Markus Rothe <corsair@gentoo.org> MIME-Base64-3.07.ebuild:
   Stable on ppc64
