@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Getopt-Long
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Getopt-Long/ChangeLog,v 1.25 2008/09/10 11:56:14 tove Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Getopt-Long/ChangeLog,v 1.26 2009/03/13 21:00:30 tove Exp $
+
+  13 Mar 2009; Torsten Veller <tove@gentoo.org> -Getopt-Long-2.34.ebuild,
+  -Getopt-Long-2.35.ebuild:
+  Cleanup
 
 *Getopt-Long-2.37 (10 Sep 2008)
 
